edit homepage and details

--- a/TMDT/TMDT.csproj
+++ b/TMDT/TMDT.csproj
@@ -288,10 +288,288 @@
     <Content Include="Content\LayoutAdminStyles.scss" />
     <None Include="Content\Site.scss" />
     <Content Include="Content\Images\paypal.svg" />
+    <Content Include="Library\css\bootstrap.min.css" />
+    <Content Include="Library\css\core.css" />
+    <Content Include="Library\css\custom.css" />
+    <Content Include="Library\css\jquery-ui.min.css" />
+    <Content Include="Library\css\material-design-iconic-font.min.css" />
+    <Content Include="Library\css\owl.carousel.min.css" />
+    <Content Include="Library\css\owl.theme.default.min.css" />
+    <Content Include="Library\css\plugins\ajax-loader.gif" />
+    <Content Include="Library\css\plugins\AjaxLoader.gif" />
+    <Content Include="Library\css\plugins\animate-slider.css" />
+    <Content Include="Library\css\plugins\animate.css" />
+    <Content Include="Library\css\plugins\fonts\slick.svg" />
+    <Content Include="Library\css\plugins\images\ui-icons_444444_256x240.png" />
+    <Content Include="Library\css\plugins\images\ui-icons_555555_256x240.png" />
+    <Content Include="Library\css\plugins\images\ui-icons_777620_256x240.png" />
+    <Content Include="Library\css\plugins\images\ui-icons_777777_256x240.png" />
+    <Content Include="Library\css\plugins\images\ui-icons_cc0000_256x240.png" />
+    <Content Include="Library\css\plugins\images\ui-icons_ffffff_256x240.png" />
+    <Content Include="Library\css\plugins\jquery-ui.css" />
+    <Content Include="Library\css\plugins\magnific-popup.css" />
+    <Content Include="Library\css\plugins\meanmenu.css" />
+    <Content Include="Library\css\plugins\slick-theme.css" />
+    <Content Include="Library\css\plugins\slick.css" />
+    <Content Include="Library\css\responsive.css" />
+    <Content Include="Library\css\shortcode\default.css" />
+    <Content Include="Library\css\shortcode\footer.css" />
+    <Content Include="Library\css\shortcode\header.css" />
+    <Content Include="Library\css\shortcode\shortcodes.css" />
+    <Content Include="Library\css\shortcode\slider.css" />
+    <Content Include="Library\css\style-customizer.css" />
+    <Content Include="Library\css\themify-icons.css" />
     <Content Include="Library\font-awesome-4.7.0\css\font-awesome.css" />
     <Content Include="Library\font-awesome-4.7.0\css\font-awesome.min.css" />
     <Content Include="Library\font-awesome-4.7.0\fonts\fontawesome-webfont.svg" />
     <Content Include="Library\font-awesome-4.7.0\HELP-US-OUT.txt" />
+    <Content Include="Library\fonts\Material-Design-Iconic-Font.svg" />
+    <Content Include="Library\fonts\themify.svg" />
+    <Content Include="Library\images\besr-product\1.jpg" />
+    <Content Include="Library\images\bg\1.jpg" />
+    <Content Include="Library\images\bg\2.jpg" />
+    <Content Include="Library\images\bg\3.jpg" />
+    <Content Include="Library\images\bg\4.jpg" />
+    <Content Include="Library\images\bg\5.jpg" />
+    <Content Include="Library\images\bg\6.jpg" />
+    <Content Include="Library\images\blog\big-images\1.jpg" />
+    <Content Include="Library\images\blog\blog-img\1.jpg" />
+    <Content Include="Library\images\blog\blog-img\2.jpg" />
+    <Content Include="Library\images\blog\blog-img\3.jpg" />
+    <Content Include="Library\images\blog\blog-img\4.jpg" />
+    <Content Include="Library\images\blog\blog-img\5.jpg" />
+    <Content Include="Library\images\blog\blog-img\6.jpg" />
+    <Content Include="Library\images\blog\sm-img\1.jpg" />
+    <Content Include="Library\images\blog\sm-img\2.jpg" />
+    <Content Include="Library\images\blog\sm-img\3.jpg" />
+    <Content Include="Library\images\blog\sm-img\4.jpg" />
+    <Content Include="Library\images\blog\sm-img\5.jpg" />
+    <Content Include="Library\images\blog\sm-img\6.jpg" />
+    <Content Include="Library\images\brand\1.png" />
+    <Content Include="Library\images\brand\2.png" />
+    <Content Include="Library\images\brand\3.png" />
+    <Content Include="Library\images\brand\4.png" />
+    <Content Include="Library\images\brand\5.png" />
+    <Content Include="Library\images\brand\6.png" />
+    <Content Include="Library\images\brand\7.png" />
+    <Content Include="Library\images\brand\8.png" />
+    <Content Include="Library\images\brand\9.png" />
+    <Content Include="Library\images\comment\1.jpg" />
+    <Content Include="Library\images\comment\2.jpg" />
+    <Content Include="Library\images\comment\3.jpg" />
+    <Content Include="Library\images\favicon.ico" />
+    <Content Include="Library\images\feature-img\1.jpg" />
+    <Content Include="Library\images\feature-img\1.png" />
+    <Content Include="Library\images\feature-img\2.jpg" />
+    <Content Include="Library\images\feature-img\2.png" />
+    <Content Include="Library\images\feature-img\3.jpg" />
+    <Content Include="Library\images\feature-img\3.png" />
+    <Content Include="Library\images\feature-img\4.jpg" />
+    <Content Include="Library\images\feature-img\5.jpg" />
+    <Content Include="Library\images\feature-img\6.jpg" />
+    <Content Include="Library\images\feature-img\banner-man.png" />
+    <Content Include="Library\images\icons\ajax-loader.gif" />
+    <Content Include="Library\images\icons\close-20.png" />
+    <Content Include="Library\images\icons\close.png" />
+    <Content Include="Library\images\icons\loading.gif" />
+    <Content Include="Library\images\icons\map.png" />
+    <Content Include="Library\images\icons\next.png" />
+    <Content Include="Library\images\icons\prev.png" />
+    <Content Include="Library\images\icons\select-option-white.png" />
+    <Content Include="Library\images\icons\select-option.png" />
+    <Content Include="Library\images\icons\send-2.png" />
+    <Content Include="Library\images\icons\send.png" />
+    <Content Include="Library\images\icons\thum1.png" />
+    <Content Include="Library\images\icons\thum10.png" />
+    <Content Include="Library\images\icons\thum2.png" />
+    <Content Include="Library\images\icons\thum3.png" />
+    <Content Include="Library\images\icons\thum4.png" />
+    <Content Include="Library\images\icons\thum5.png" />
+    <Content Include="Library\images\icons\thum6.png" />
+    <Content Include="Library\images\icons\thum7.png" />
+    <Content Include="Library\images\icons\thum7_1.png" />
+    <Content Include="Library\images\icons\thum8.png" />
+    <Content Include="Library\images\icons\thum9.png" />
+    <Content Include="Library\images\logo\2.png" />
+    <Content Include="Library\images\logo\logo-large.png" />
+    <Content Include="Library\images\logo\logo.png" />
+    <Content Include="Library\images\new-product\1.jpg" />
+    <Content Include="Library\images\new-product\2.jpg" />
+    <Content Include="Library\images\new-product\3.jpg" />
+    <Content Include="Library\images\new-product\4.jpg" />
+    <Content Include="Library\images\new-product\5.jpg" />
+    <Content Include="Library\images\new-product\6.jpg" />
+    <Content Include="Library\images\new-product\7.jpg" />
+    <Content Include="Library\images\others\1.jpg" />
+    <Content Include="Library\images\payment\1.jpg" />
+    <Content Include="Library\images\payment\2.jpg" />
+    <Content Include="Library\images\payment\3.jpg" />
+    <Content Include="Library\images\payment\4.jpg" />
+    <Content Include="Library\images\payment\5.jpg" />
+    <Content Include="Library\images\popular-pro-2\1.jpg" />
+    <Content Include="Library\images\popular-pro-2\10.jpg" />
+    <Content Include="Library\images\popular-pro-2\2.jpg" />
+    <Content Include="Library\images\popular-pro-2\3.jpg" />
+    <Content Include="Library\images\popular-pro-2\4.jpg" />
+    <Content Include="Library\images\popular-pro-2\5.jpg" />
+    <Content Include="Library\images\popular-pro-2\6.jpg" />
+    <Content Include="Library\images\popular-pro-2\7.jpg" />
+    <Content Include="Library\images\popular-pro-2\8.jpg" />
+    <Content Include="Library\images\popular-pro-2\9.jpg" />
+    <Content Include="Library\images\popular-pro\1.jpg" />
+    <Content Include="Library\images\popular-pro\2.jpg" />
+    <Content Include="Library\images\popular-pro\3.jpg" />
+    <Content Include="Library\images\portfolio\equal\1.jpg" />
+    <Content Include="Library\images\portfolio\equal\10.jpg" />
+    <Content Include="Library\images\portfolio\equal\11.jpg" />
+    <Content Include="Library\images\portfolio\equal\12.jpg" />
+    <Content Include="Library\images\portfolio\equal\13.jpg" />
+    <Content Include="Library\images\portfolio\equal\14.jpg" />
+    <Content Include="Library\images\portfolio\equal\2.jpg" />
+    <Content Include="Library\images\portfolio\equal\3.jpg" />
+    <Content Include="Library\images\portfolio\equal\4.jpg" />
+    <Content Include="Library\images\portfolio\equal\5.jpg" />
+    <Content Include="Library\images\portfolio\equal\6.jpg" />
+    <Content Include="Library\images\portfolio\equal\7.jpg" />
+    <Content Include="Library\images\portfolio\equal\8.jpg" />
+    <Content Include="Library\images\portfolio\equal\9.jpg" />
+    <Content Include="Library\images\portfolio\justified\1.jpg" />
+    <Content Include="Library\images\portfolio\justified\10.jpg" />
+    <Content Include="Library\images\portfolio\justified\11.jpg" />
+    <Content Include="Library\images\portfolio\justified\12.jpg" />
+    <Content Include="Library\images\portfolio\justified\13.jpg" />
+    <Content Include="Library\images\portfolio\justified\14.jpg" />
+    <Content Include="Library\images\portfolio\justified\2.jpg" />
+    <Content Include="Library\images\portfolio\justified\3.jpg" />
+    <Content Include="Library\images\portfolio\justified\4.jpg" />
+    <Content Include="Library\images\portfolio\justified\5.jpg" />
+    <Content Include="Library\images\portfolio\justified\6.jpg" />
+    <Content Include="Library\images\portfolio\justified\7.jpg" />
+    <Content Include="Library\images\portfolio\justified\8.jpg" />
+    <Content Include="Library\images\portfolio\justified\9.jpg" />
+    <Content Include="Library\images\portfolio\masonry-col3\1.jpg" />
+    <Content Include="Library\images\portfolio\masonry-col3\10.jpg" />
+    <Content Include="Library\images\portfolio\masonry-col3\2.jpg" />
+    <Content Include="Library\images\portfolio\masonry-col3\3.jpg" />
+    <Content Include="Library\images\portfolio\masonry-col3\4.jpg" />
+    <Content Include="Library\images\portfolio\masonry-col3\5.jpg" />
+    <Content Include="Library\images\portfolio\masonry-col3\6.jpg" />
+    <Content Include="Library\images\portfolio\masonry-col3\7.jpg" />
+    <Content Include="Library\images\portfolio\masonry-col3\8.jpg" />
+    <Content Include="Library\images\portfolio\masonry-col3\9.jpg" />
+    <Content Include="Library\images\portfolio\single-portfolio\1.jpg" />
+    <Content Include="Library\images\portfolio\single-portfolio\2.jpg" />
+    <Content Include="Library\images\portfolio\single-portfolio\3.jpg" />
+    <Content Include="Library\images\portfolio\single-portfolio\4.jpg" />
+    <Content Include="Library\images\portfolio\single-portfolio\5.jpg" />
+    <Content Include="Library\images\portfolio\width-variation-2\1.jpg" />
+    <Content Include="Library\images\portfolio\width-variation-2\2.jpg" />
+    <Content Include="Library\images\portfolio\width-variation-2\3.jpg" />
+    <Content Include="Library\images\portfolio\width-variation-2\4 - Copy %283%29.jpg" />
+    <Content Include="Library\images\portfolio\width-variation-2\4.jpg" />
+    <Content Include="Library\images\portfolio\width-variation-2\5.jpg" />
+    <Content Include="Library\images\portfolio\width-variation-2\6.jpg" />
+    <Content Include="Library\images\portfolio\width-variation-2\7.jpg" />
+    <Content Include="Library\images\portfolio\width-variation-2\8.jpg" />
+    <Content Include="Library\images\portfolio\width-variation-2\9.jpg" />
+    <Content Include="Library\images\portfolio\width-variation\1.jpg" />
+    <Content Include="Library\images\portfolio\width-variation\10.jpg" />
+    <Content Include="Library\images\portfolio\width-variation\11.jpg" />
+    <Content Include="Library\images\portfolio\width-variation\12.jpg" />
+    <Content Include="Library\images\portfolio\width-variation\2.jpg" />
+    <Content Include="Library\images\portfolio\width-variation\3.jpg" />
+    <Content Include="Library\images\portfolio\width-variation\4.jpg" />
+    <Content Include="Library\images\portfolio\width-variation\5.jpg" />
+    <Content Include="Library\images\portfolio\width-variation\6.jpg" />
+    <Content Include="Library\images\portfolio\width-variation\7.jpg" />
+    <Content Include="Library\images\portfolio\width-variation\8.jpg" />
+    <Content Include="Library\images\portfolio\width-variation\9.jpg" />
+    <Content Include="Library\images\product-3\1.png" />
+    <Content Include="Library\images\product-3\2.png" />
+    <Content Include="Library\images\product-3\3.png" />
+    <Content Include="Library\images\product-3\4.png" />
+    <Content Include="Library\images\product-3\5.png" />
+    <Content Include="Library\images\product-3\6.png" />
+    <Content Include="Library\images\product-3\7.png" />
+    <Content Include="Library\images\product-details\big-img\1-440x590.jpg" />
+    <Content Include="Library\images\product-details\big-img\1.jpg" />
+    <Content Include="Library\images\product-details\big-img\10.jpg" />
+    <Content Include="Library\images\product-details\big-img\11.jpg" />
+    <Content Include="Library\images\product-details\big-img\12.jpg" />
+    <Content Include="Library\images\product-details\big-img\13.jpg" />
+    <Content Include="Library\images\product-details\big-img\2-440x590.jpg" />
+    <Content Include="Library\images\product-details\big-img\2.jpg" />
+    <Content Include="Library\images\product-details\big-img\3-1-440x590.jpg" />
+    <Content Include="Library\images\product-details\big-img\3.jpg" />
+    <Content Include="Library\images\product-details\big-img\4.jpg" />
+    <Content Include="Library\images\product-details\big-img\5.jpg" />
+    <Content Include="Library\images\product-details\big-img\6.jpg" />
+    <Content Include="Library\images\product-details\big-img\7.jpg" />
+    <Content Include="Library\images\product-details\big-img\8.jpg" />
+    <Content Include="Library\images\product-details\big-img\9.jpg" />
+    <Content Include="Library\images\product-details\small-img\1.jpg" />
+    <Content Include="Library\images\product-details\small-img\2.jpg" />
+    <Content Include="Library\images\product-details\small-img\3.jpg" />
+    <Content Include="Library\images\product-details\small-img\4.jpg" />
+    <Content Include="Library\images\product\1.png" />
+    <Content Include="Library\images\product\10.png" />
+    <Content Include="Library\images\product\11.png" />
+    <Content Include="Library\images\product\12.png" />
+    <Content Include="Library\images\product\13.png" />
+    <Content Include="Library\images\product\14.png" />
+    <Content Include="Library\images\product\15.png" />
+    <Content Include="Library\images\product\16.png" />
+    <Content Include="Library\images\product\2.png" />
+    <Content Include="Library\images\product\3.png" />
+    <Content Include="Library\images\product\4.png" />
+    <Content Include="Library\images\product\5.png" />
+    <Content Include="Library\images\product\6.png" />
+    <Content Include="Library\images\product\7.png" />
+    <Content Include="Library\images\product\8.png" />
+    <Content Include="Library\images\product\9.png" />
+    <Content Include="Library\images\product\big-img\1.jpg" />
+    <Content Include="Library\images\product\sm-img\1.jpg" />
+    <Content Include="Library\images\product\sm-img\1.png" />
+    <Content Include="Library\images\product\sm-img\2.jpg" />
+    <Content Include="Library\images\product\sm-img\3.png" />
+    <Content Include="Library\images\product\sm-img\4.png" />
+    <Content Include="Library\images\review\1.jpg" />
+    <Content Include="Library\images\review\2.jpg" />
+    <Content Include="Library\images\sidebar-img\1.jpg" />
+    <Content Include="Library\images\sidebar-img\2.jpg" />
+    <Content Include="Library\images\sidebar-img\3.jpg" />
+    <Content Include="Library\images\sidebar-img\4.jpg" />
+    <Content Include="Library\images\sidebar-img\5.jpg" />
+    <Content Include="Library\images\sidebar-img\6.jpg" />
+    <Content Include="Library\images\sidebar-img\7.jpg" />
+    <Content Include="Library\images\sidebar-img\8.jpg" />
+    <Content Include="Library\images\slider\bg\1.png" />
+    <Content Include="Library\images\slider\bg\2.jpg" />
+    <Content Include="Library\images\slider\bg\2.png" />
+    <Content Include="Library\images\slider\bg\3.jpg" />
+    <Content Include="Library\images\slider\bg\4.jpg" />
+    <Content Include="Library\images\slider\bg\pexels-photo-450212.png" />
+    <Content Include="Library\images\slider\fornt-img\1.png" />
+    <Content Include="Library\images\slider\fornt-img\man-style.png" />
+    <Content Include="Library\images\team\1.jpg" />
+    <Content Include="Library\images\team\2.jpg" />
+    <Content Include="Library\images\team\3.jpg" />
+    <Content Include="Library\images\team\4.jpg" />
+    <Content Include="Library\images\test\client\1.png" />
+    <Content Include="Library\images\test\client\2.png" />
+    <Content Include="Library\images\test\client\3.png" />
+    <Content Include="Library\images\test\client\4.png" />
+    <Content Include="Library\images\test\client\5.png" />
+    <Content Include="Library\images\test\client\6.png" />
+    <Content Include="Library\js\bootstrap.min.js" />
+    <Content Include="Library\js\main.js" />
+    <Content Include="Library\js\owl.carousel.min.js" />
+    <Content Include="Library\js\plugins.js" />
+    <Content Include="Library\js\slick.min.js" />
+    <Content Include="Library\js\vendor\jquery-1.12.0.min.js" />
+    <Content Include="Library\js\vendor\modernizr-2.8.3.min.js" />
+    <Content Include="Library\js\waypoints.min.js" />
+    <Content Include="Library\style.css" />
     <Content Include="Scripts\ajaxFilter.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -328,6 +606,16 @@
     <Content Include="Library\font-awesome-4.7.0\scss\_screen-reader.scss" />
     <Content Include="Library\font-awesome-4.7.0\scss\_stacked.scss" />
     <Content Include="Library\font-awesome-4.7.0\scss\_variables.scss" />
+    <Content Include="Library\css\plugins\fonts\slick.eot" />
+    <Content Include="Library\css\plugins\fonts\slick.ttf" />
+    <Content Include="Library\css\plugins\fonts\slick.woff" />
+    <Content Include="Library\fonts\Material-Design-Iconic-Font.eot" />
+    <Content Include="Library\fonts\Material-Design-Iconic-Font.ttf" />
+    <Content Include="Library\fonts\Material-Design-Iconic-Font.woff" />
+    <Content Include="Library\fonts\Material-Design-Iconic-Font.woff2" />
+    <Content Include="Library\fonts\themify.eot" />
+    <Content Include="Library\fonts\themify.ttf" />
+    <Content Include="Library\fonts\themify.woff" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\build-assets.js" />
     <Content Include="Scripts\build-pug.js" />
