--- a/TMDT/Web.config
+++ b/TMDT/Web.config
@@ -36,7 +36,8 @@
     </root>
   </log4net>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=TMDT-20201130101502;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=SQL5101.site4now.net;Initial Catalog=DB_A6DB35_suhoangan1999;User Id=DB_A6DB35_suhoangan1999_admin;Password=suhoangan1999" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="workstation id=TMDT004.mssql.somee.com;packet size=4096;user id=hollownine_SQLLogin_1;pwd=veame7dcx2;data source=TMDT004.mssql.somee.com;persist security info=False;initial catalog=TMDT004" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="PayPalLogger" value="PayPal.Log.Log4netLogger" />
